2009-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-parent-bindings): Define M-? as
	`slime-edit-callers', too. My previous choice of M-_ was warped
	due to my German layout.

2009-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	New binding: M-_ (`slime-edit-callers').

	Similiar to `slime-who-calls' but only creates an Xref buffer if
	needed for disambiguation, and also pushes to the definition
	stack.

	Spiritually like M-. but works "in the other direction".

	* slime.el (sllime-edit-callers): New function. Cross between
	`slime-who-calls' and `slime-edit-definition'.
	(slime-parent-bindings): Define M-_ as `slime-edit-callers'.
	(slime-pop-xref-buffer): New helper. Extracted from
	`slime-show-xrefs'.
	(slime-show-xrefs): Use it.
	(slime-xref): Let callers specify a continuation.

2009-09-17  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-abcl.lisp (sys::break): Fix typo.
	(slot-definition-documentation, slot-definition-type)
	(class-prototype, generic-function-declarations)
	(specializers-direct-methods, slot-boundp-using-class)
	(slot-value-using-class): Add IGNORE declarations. Compiling
	swank-abcl.lisp is now free of warnings.
	(swank-compile-file): Load the compiled file even though warnings
	were signalled during compilation.

2009-09-17  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (source-location): Emacs buffers start at 1,
	whereas CL files start at 0 (Tobias Rittweiler).

2009-09-16  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (documentation-symbol): Return more readable information.

2009-09-14  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (source-location): Fix typo.

2009-09-12  Mark Evenson  <evenson@panix.com>

	Provided by Alan Ruttenberg.

	* swank-abcl.lisp (source-location): Make edit definition work.

	* swank-abcl.lisp (arglist): Now works with generic functions.


2009-09-08  Helmut Eller  <heller@common-lisp.net>

	* swank-loader.lisp (lisp-version-string): Include "-ics" for